Update index.html 04:14 482025

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
     <header>
         <nav>
-            <div class="logo">Dr. Sarah Analytics</div>
+            <div class="logo">Dr. Heisenberg</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -674,5 +674,6 @@
         });
     </script>
 </body>
+
 
 </html>
